--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<p style="font-size: 60%; text-align: right;">blog built using the <a href="https://github.com/jasonlong/cayman-theme">cayman-theme</a> 
+<p style="font-size: 60%; text-align: right;">website built using the <a href="https://github.com/jasonlong/cayman-theme">cayman-theme</a> 
